--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 flask = "==2.1.3"
 flake8 = "==4.0.1"
 gunicorn = "==20.1.0"
+requests = "*"
 
 [dev-packages]
 pytest-mock = "==3.7.0"
