--- a/Pipfile
+++ b/Pipfile
@@ -7,13 +7,13 @@ name = "pypi"
 flask = "==2.1.3"
 flake8 = "==4.0.1"
 gunicorn = "==20.1.0"
-requests = "*"
-flask-mail = "*"
-envyaml = "*"
+requests = "==2.28.1"
+flask-mail = "==0.9.1"
+envyaml = "=1.10.211231"
 
 [dev-packages]
 pytest-mock = "==3.7.0"
-pytest-env = "*"
+pytest-env = "==0.6.2"
 
 [requires]
 python_version = "3.9"
