--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,8 @@ flake8 = "==4.0.1"
 gunicorn = "==20.1.0"
 requests = "==2.28.1"
 flask-mail = "==0.9.1"
-envyaml = "=1.10.211231"
+envyaml = "==1.10.211231"
+flask-cors = "==3.0.10"
 
 [dev-packages]
 pytest-mock = "==3.7.0"
