--- a/src/config/config.yaml
+++ b/src/config/config.yaml
@@ -1,6 +1,6 @@
 api:
   url: https://api.apilayer.com/exchangerates_data/convert
-  key: $api_key
+  api_key: $api_key
   default_currency_from: 'BTC'
   default_currency_to: 'UAH'
 email:
